--- a/Stylesheet.html
+++ b/Stylesheet.html
@@ -7,19 +7,34 @@
 }
 
 :root {
+  /* Blueshift Brand Colors - Light Theme */
+  --blueshift-primary: #0066CC;
+  --blueshift-primary-dark: #004C99;
+  --blueshift-primary-light: #3399FF;
+  --blueshift-secondary: #00B8D4;
+  --blueshift-accent: #7C4DFF;
+  --blueshift-success: #00C853;
+  --blueshift-warning: #FF9100;
+  --blueshift-error: #FF5252;
+  
   /* Light theme colors */
-  --bg-primary: #f5f5f5;
-  --bg-secondary: #ffffff;
-  --text-primary: #333333;
-  --text-secondary: #666666;
-  --border-color: #e0e0e0;
-  --primary-color: #2196f3;
-  --primary-hover: #1976d2;
-  --error-color: #f44336;
-  --success-color: #4caf50;
-  --warning-color: #ff9800;
-  --shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  --shadow-hover: 0 4px 8px rgba(0, 0, 0, 0.15);
+  --bg-primary: #FAFAFA;
+  --bg-secondary: #FFFFFF;
+  --text-primary: #212121;
+  --text-secondary: #757575;
+  --text-light: #9E9E9E;
+  --border-color: #E0E0E0;
+  --primary-color: var(--blueshift-primary);
+  --primary-hover: var(--blueshift-primary-dark);
+  --primary-light: var(--blueshift-primary-light);
+  --secondary-color: var(--blueshift-secondary);
+  --accent-color: var(--blueshift-accent);
+  --error-color: var(--blueshift-error);
+  --success-color: var(--blueshift-success);
+  --warning-color: var(--blueshift-warning);
+  --shadow: 0 2px 4px rgba(0, 0, 0, 0.08);
+  --shadow-hover: 0 4px 12px rgba(0, 0, 0, 0.12);
+  --shadow-elevated: 0 8px 24px rgba(0, 0, 0, 0.15);
 }
 
 body {
@@ -33,14 +48,16 @@ body {
 /* Dark mode */
 body.dark-mode {
   --bg-primary: #121212;
-  --bg-secondary: #1e1e1e;
-  --text-primary: #e0e0e0;
-  --text-secondary: #a0a0a0;
-  --border-color: #333333;
-  --primary-color: #64b5f6;
-  --primary-hover: #42a5f5;
+  --bg-secondary: #1E1E1E;
+  --text-primary: #E0E0E0;
+  --text-secondary: #B0B0B0;
+  --text-light: #757575;
+  --border-color: #424242;
+  --primary-color: var(--blueshift-primary-light);
+  --primary-hover: var(--blueshift-primary);
   --shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
-  --shadow-hover: 0 4px 8px rgba(0, 0, 0, 0.4);
+  --shadow-hover: 0 4px 12px rgba(0, 0, 0, 0.4);
+  --shadow-elevated: 0 8px 24px rgba(0, 0, 0, 0.5);
 }
 
 /* Layout */
@@ -121,12 +138,24 @@ body.dark-mode {
 
 /* Site input section */
 .site-input-section {
-  background-color: #e3f2fd;
+  background: linear-gradient(135deg, rgba(0, 102, 204, 0.05) 0%, rgba(0, 184, 212, 0.05) 100%);
   border: 2px solid var(--primary-color);
+  position: relative;
+  overflow: hidden;
+}
+
+.site-input-section::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 4px;
+  background: linear-gradient(90deg, var(--blueshift-primary) 0%, var(--blueshift-secondary) 100%);
 }
 
 body.dark-mode .site-input-section {
-  background-color: #1a237e;
+  background: linear-gradient(135deg, rgba(51, 153, 255, 0.1) 0%, rgba(0, 184, 212, 0.1) 100%);
   border-color: var(--primary-color);
 }
 
@@ -176,12 +205,14 @@ body.dark-mode .site-input-section {
 }
 
 .button-accent {
-  background-color: var(--success-color);
+  background-color: var(--accent-color);
   color: white;
 }
 
 .button-accent:hover {
-  background-color: #388e3c;
+  background-color: #6A3FE4;
+  transform: translateY(-1px);
+  box-shadow: 0 4px 8px rgba(124, 77, 255, 0.3);
 }
 
 .icon-button {
@@ -433,15 +464,56 @@ body.dark-mode .alert-info {
   display: none !important;
 }
 
-/* Responsive */
+/* Mobile-only elements */
+.mobile-only {
+  display: none;
+}
+
+@media (max-width: 768px) {
+  .mobile-only {
+    display: inline-flex;
+  }
+}
+
+/* Improve header text on mobile */
+@media (max-width: 480px) {
+  .header-text {
+    display: none;
+  }
+  
+  .header-title::after {
+    content: "Audit Gen";
+    font-size: 1.125rem;
+  }
+}
+
+/* Enhanced Mobile Responsiveness */
+@media (max-width: 1024px) {
+  .main-content {
+    max-width: 100%;
+    padding: 1.5rem;
+  }
+}
+
 @media (max-width: 768px) {
   .header-content {
     flex-direction: column;
     gap: 1rem;
+    text-align: center;
+  }
+  
+  .header-title {
+    font-size: 1.375rem;
+  }
+  
+  .header-actions {
+    width: 100%;
+    justify-content: center;
   }
   
   .site-input-group {
     flex-direction: column;
+    gap: 0.75rem;
   }
   
   .site-input-field {
@@ -451,29 +523,144 @@ body.dark-mode .alert-info {
   .button {
     width: 100%;
     justify-content: center;
+    padding: 0.75rem 1rem;
+    font-size: 1rem;
   }
   
   .submit-button {
     width: 100%;
   }
+  
+  .card {
+    margin-bottom: 1.5rem;
+  }
+  
+  .script-code {
+    font-size: 0.75rem;
+    padding: 1rem;
+  }
+  
+  .copy-button {
+    position: static;
+    width: 100%;
+    margin-bottom: 1rem;
+  }
+  
+  .instructions-list {
+    padding: 1rem;
+  }
+  
+  .instructions-list ol {
+    margin-left: 1rem;
+  }
 }
 
 @media (max-width: 480px) {
   .main-content {
-    padding: 1rem 0.5rem;
+    padding: 1rem 0.75rem;
   }
   
   .card {
     padding: 1rem;
-    border-radius: 4px;
+    border-radius: 6px;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
+  }
+  
+  .header {
+    padding: 0.75rem 0;
   }
   
   .header-title {
+    font-size: 1.125rem;
+    gap: 0.25rem;
+  }
+  
+  .header-title .material-icons {
     font-size: 1.25rem;
   }
   
   .section-title {
     font-size: 1.125rem;
+    margin-bottom: 0.75rem;
+  }
+  
+  .section-subtitle {
+    font-size: 0.875rem;
+  }
+  
+  .text-input,
+  .textarea-input {
+    font-size: 16px; /* Prevents zoom on iOS */
+    padding: 0.875rem;
+  }
+  
+  .script-code {
+    font-size: 0.625rem;
+    line-height: 1.4;
+    max-height: 300px;
+  }
+  
+  .instructions-list {
+    font-size: 0.875rem;
+  }
+  
+  .alert {
+    font-size: 0.875rem;
+    padding: 0.75rem;
+  }
+  
+  .snackbar {
+    bottom: 1rem;
+    left: 1rem;
+    right: 1rem;
+    transform: translateX(0) translateY(100px);
+    font-size: 0.875rem;
+  }
+  
+  .snackbar.show {
+    transform: translateX(0) translateY(0);
+  }
+}
+
+/* Touch-friendly enhancements */
+@media (hover: none) and (pointer: coarse) {
+  .button,
+  .icon-button {
+    min-height: 44px;
+    min-width: 44px;
+  }
+  
+  .text-input,
+  .textarea-input {
+    min-height: 44px;
+  }
+  
+  .card {
+    transition: none;
+  }
+  
+  .card:hover {
+    box-shadow: var(--shadow);
+  }
+}
+
+/* Landscape mobile adjustments */
+@media (max-width: 896px) and (orientation: landscape) {
+  .header {
+    padding: 0.5rem 0;
+  }
+  
+  .main-content {
+    padding: 1rem;
+  }
+  
+  .card {
+    padding: 0.75rem;
+    margin-bottom: 1rem;
+  }
+  
+  .script-code {
+    max-height: 200px;
   }
 }
 </style>
