--- a/Stylesheet.html
+++ b/Stylesheet.html
@@ -499,6 +499,78 @@ body.dark-mode .alert-info {
   margin-top: 0.25rem;
 }
 
+/* Folder Modal Styles */
+.folder-modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1000;
+}
+
+.folder-modal-content {
+  background-color: var(--bg-secondary);
+  border-radius: 8px;
+  padding: 2rem;
+  max-width: 500px;
+  width: 90%;
+  max-height: 80vh;
+  overflow-y: auto;
+  box-shadow: var(--shadow-elevated);
+}
+
+.folder-modal-content h3 {
+  margin-bottom: 1.5rem;
+  color: var(--text-primary);
+}
+
+.folder-select-container {
+  margin-bottom: 1.5rem;
+}
+
+.folder-select {
+  width: 100%;
+  padding: 0.75rem;
+  border: 1px solid var(--border-color);
+  border-radius: 4px;
+  background-color: var(--bg-primary);
+  color: var(--text-primary);
+  font-size: 0.875rem;
+  font-family: 'Roboto', Arial, sans-serif;
+}
+
+.folder-select:focus {
+  outline: none;
+  border-color: var(--primary-color);
+  box-shadow: 0 0 0 3px rgba(0, 102, 204, 0.1);
+}
+
+.folder-modal-actions {
+  display: flex;
+  gap: 1rem;
+  justify-content: flex-end;
+}
+
+@media (max-width: 480px) {
+  .folder-modal-content {
+    padding: 1.5rem;
+    width: 95%;
+  }
+  
+  .folder-modal-actions {
+    flex-direction: column-reverse;
+  }
+  
+  .folder-modal-actions .button {
+    width: 100%;
+  }
+}
+
 /* Hide class */
 .hidden {
   display: none !important;
